# firewall_madrigalv2

./: -gitignore  Cargo.toml  README.md  build-ebpf.sh  build_all.sh  config.cfg  config.yml  test_firewall.sh
.cargo/: config.toml 
firewall/: Cargo.toml  build.rs.bak
firewall-cli/: Cargo.toml  config.cfg
firewall-cli/src/: config.rs  main.rs
firewall-common/: Cargo.toml
firewall-ebpf/: Cargo.toml
firewall-ebpf/src/: main.rs
firewall/src/: main.rs
